...

  @override
  State<AddEventPage> createState() => _AddEventPageState();
}

class _AddEventPageState extends State<AddEventPage> {
  static const Key eventNameInputKey = Key('event_create_name_input');
  static const Key eventDescriptionInputKey = Key(
    'event_create_description_input',
  );
  static const Key eventStartDateInputKey = Key(
    'event_create_start_date_input',
  );
  static const Key eventEndDateInputKey = Key('event_create_end_date_input');
  static const Key eventGroupDropdownKey = Key('event_create_group_dropdown');
  static const Key addMembersButtonKey = Key('event_create_add_members_button');
  static const Key submitButtonKey = Key('event_create_submit_button');

  final _formKey = GlobalKey<FormState>();

  final TextEditingController eventNameController = TextEditingController();
  final TextEditingController eventDescriptionController =
      TextEditingController();
...
