...
  @override
  State<EventSettingPage> createState() => _EventSettingPageState();
}

class _EventSettingPageState extends State<EventSettingPage> {
  static const Key inviteGroupMembersButtonKey = Key(
    'event_setting_invite_group_members_button',
  );
  static const Key inviteSaveButtonKey = Key(
    'event_setting_invite_save_button',
  );
  static const Key nameInputKey = Key('event_setting_name_input');
  static const Key descriptionInputKey = Key('event_setting_description_input');
  static const Key startDateInputKey = Key('event_setting_start_date_input');
  static const Key endDateInputKey = Key('event_setting_end_date_input');
  static const Key saveButtonKey = Key('event_setting_save_button');
  static const Key deleteButtonKey = Key('event_setting_delete_button');

  final TextEditingController controller = TextEditingController();
  final TextEditingController eventStartController = TextEditingController();
  final TextEditingController eventEndController = TextEditingController();
  final TextEditingController descriptionController = TextEditingController();
...
